--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ img {
   height: 11px;
   margin-right: 10px;
   fill: var(--text-main-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-tel-svg {
@@ -89,6 +90,7 @@ img {
   height: 15px;
   margin-right: 10px;
   fill: var(--text-main-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-mail:hover .adress-mail-svg,
@@ -153,6 +155,40 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-color-main);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-menu-link {
+  position: relative;
+  display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-menu-link::after {
+  position: absolute;
+  bottom: 0;
+  content: "";
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  opacity: 0;
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-menu-link:hover::after {
+  opacity: 1;
 }
 
 .navigation-menu-link:hover,
@@ -164,6 +200,7 @@ img {
 .adress-tel {
   font-style: normal;
   color: var(--text-main-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-mail:hover,
@@ -305,8 +342,16 @@ img {
 }
 
 .our-works-text {
+  position: relative;
+  bottom: 70px;
+  display: block;
   text-align: center;
+  padding-top: 27px;
+  padding-bottom: 27px;
   color: var(--text-secondary-color);
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 /* OUR TEAM */
@@ -352,10 +397,12 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link-item-svg {
   fill: var(--text-main-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-team-social-link:hover {
@@ -364,7 +411,6 @@ img {
 
 .our-team-social-link:hover .social-link-item-svg,
 .our-team-social-link:focus .social-link-item-svg {
-  background-color: var(--accent-color);
   fill: var(--text-secondary-color);
 }
 
@@ -413,28 +459,27 @@ img {
   height: 90px;
   border: #afb1b8 1px solid;
   border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-logo-svg {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-client-logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 63px;
-  padding-right: 63px;
+  width: 170px;
+  height: 90px;
 }
 
 .our-client-list-item:hover {
   border: var(--accent-color) 1px solid;
 }
 
-.our-client-logo:hover .client-logo-svg {
-  fill: var(--accent-color);
-}
-
+.our-client-logo:hover .client-logo-svg,
 .our-client-logo:focus .client-logo-svg {
   fill: var(--accent-color);
 }
@@ -495,7 +540,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--text-secondary-color);
 }
 
@@ -507,6 +552,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-links-text {
@@ -533,6 +579,7 @@ img {
   height: 44px;
   border-radius: 50%;
   background-color: var(--text-main-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-footer-link:hover,
