--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,30 @@ img {
   margin-right: 50px;
 }
 
+.navigation-menu-item .current {
+  /* color: var(--accent-color); */
+  position: relative;
+  display: block;
+}
+
+.current::after {
+  position: absolute;
+  bottom: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-menu-link:hover::after {
+  content: "";
+  background-color: var(--accent-color);
+  transform: scale(1);
+}
+
 .adress-mail-svg {
   display: inline-block;
   width: 16px;
@@ -173,7 +197,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation-menu-link::after {
+/* .navigation-menu-link::after {
   position: absolute;
   bottom: 0;
   content: "";
@@ -185,11 +209,12 @@ img {
   opacity: 0;
   border-radius: 2px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
 }
 
 .navigation-menu-link:hover::after {
   opacity: 1;
-}
+} */
 
 .navigation-menu-link:hover,
 .navigation-menu-link:focus {
@@ -250,20 +275,32 @@ img {
 }
 
 .hero-section-button {
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 30px;
   display: flex;
   align-items: center;
   text-align: center;
-  letter-spacing: 0.06em;
+  width: 200px;
+  height: 50px;
+  /* letter-spacing: 0.06em; */
   background-color: var(--accent-color);
-  color: var(--text-secondary-color);
+  /* color: var(--text-secondary-color); */
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+}
+
+.hero-button-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--text-secondary-color);
+  margin-left: 32px;
+  /* padding: 32px 10px; */
 }
 
 /* About Us Section */
@@ -616,6 +653,8 @@ img {
   cursor: pointer;
   color: var(--title-color-main);
   background: #f5f4fa;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-filter:hover,
@@ -662,6 +701,7 @@ img {
 }
 
 .projects-list-item {
+  position: relative;
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
@@ -705,10 +745,27 @@ img {
 }
 
 .projects-description {
+  display: block;
+  position: absolute;
+  transform: translateY(107%);
   font-weight: normal;
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
-
+  width: 369px;
+  height: 294px;
+  padding: 24px 63px;
+  background-color: rgba(33, 150, 243, 0.9);
   color: var(--text-secondary-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: hidden;
+}
+
+.projects-list-item:hover .projects-description {
+  /* opacity: 1; */
+  transform: translateY(-107%);
+}
+
+.projects-title-box {
+  z-index: 1;
 }
